# mole

./: .editorconfig  .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  api.http  pyproject.toml
backend/apps/messages/: apps.py  consumers.py  models.py  routing.py
backend/apps/posts/: admin.py  feed.py  models.py  serializers.py  tests.py  views.py
backend/apps/posts/migrations/: 0001_initial.py  0002_alter_post_options_alter_post_updated_at.py  0003_alter_post_updated_at.py  0004_alter_imagepost_image_comment.py  0005_postlike.py
backend/apps/posts/tests/: test_comments.py  test_feed.py  test_likes.py  test_posts.py
backend/apps/users/: admin.py  backends.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_user_groups_user_user_permissions.py  0003_remove_user_groups_remove_user_user_permissions.py  0004_user_groups_user_user_permissions.py  0005_alter_profile_avatar.py  0006_alter_user_username.py  0007_follow_profile_following.py
backend/apps/users/tests/: test_auth.py  test_profile.py  test_registration.py
backend/config/: asgi.py  settings.py  urls.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/src/: utils.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  style.css
frontend/src/components/: AvatarCropper.css  AvatarCropper.tsx  CommentSection.tsx  ImagePost.tsx  Navbar.css  Navbar.tsx  SearchBar.css  SearchBar.tsx  TextPost.tsx  ThemeToggle.tsx  posts.css
frontend/src/context/: AuthContext.tsx
frontend/src/types/: auth.ts  (+1 more)
(+14 files in other folders)
