[project]
name = "mole"
version = "0.1.0"
description = "Modern social media web app built with Django and Next.js"
readme = "README.md"
requires-python = ">=3.14.6"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "environs>=15.0.1",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "requests>=2.34.2",
]
